--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <header>
         <h3>Influencer products</h3>
     </header>
-    <main>
-        <section class=container>
 
+    <section class=container>
+
+        <div class="products-section">
             <div class="infu">
                 <h1>Start your Journey as <br> Influencer</h1>
                 <p>How do influencers get started?
@@ -28,17 +29,20 @@
                     you have thousands of followers under your belt, you can start reaching out to brands. You can
                     participate
                     in their campaigns or use their brand-related hashtags in your posts</p>
-                <p class="click">Preebook Now <a target="_blank"
-                        href="https://www.facebook.com/groups/webdevelopmentbatch5/">
 
-                        <i class="fas fa-arrow-right"></i>
-                    </a></p>
+                <a class="click" target="_blank" href="https://www.facebook.com/groups/webdevelopmentbatch5/">Preebook
+                    Now
+
+                    <i class="fas fa-arrow-right"></i>
+                </a>
             </div>
             <div class="camera">
                 <img src="images/main-camera.png" alt="">
             </div>
+        </div>
 
-        </section>
+    </section>
+    <main>
         <!-- Popular Collection -->
         <h2 class="section-title">Popular Collection</h2>
         <section class="container">
